[gd_scene load_steps=11 format=3 uid="uid://weqxyu3qxpgy"]

[ext_resource type="Script" uid="uid://deoa2pnf2ls1s" path="res://scripts/win_menu.gd" id="1_7shsi"]
[ext_resource type="Theme" uid="uid://d12u73fhyywec" path="res://themes/game_menus.tres" id="2_dmaew"]
[ext_resource type="PackedScene" uid="uid://cv78xn6f4lnyh" path="res://scenes/stars.tscn" id="3_dmaew"]
[ext_resource type="Texture2D" uid="uid://2s4pcm06p4r" path="res://assets/textures/play_button.tres" id="4_1xbon"]
[ext_resource type="Texture2D" uid="uid://c6cdkaue3vss6" path="res://assets/textures/play_button_hover.tres" id="5_xtbbn"]
[ext_resource type="Texture2D" uid="uid://bci731ls2ia1w" path="res://assets/textures/restart_button.tres" id="6_w75pu"]
[ext_resource type="Texture2D" uid="uid://c768dvkgdnmwe" path="res://assets/textures/restart_button_hover.tres" id="7_a5eom"]
[ext_resource type="Texture2D" uid="uid://bylivwk2au6r5" path="res://assets/textures/home_button.tres" id="8_a5eom"]
[ext_resource type="Texture2D" uid="uid://baa27hxkli55h" path="res://assets/textures/home_button_hover.tres" id="9_0v1ms"]
[ext_resource type="AudioStream" uid="uid://c8kstskqwb04m" path="res://assets/audio/SFX/jingle.ogg" id="10_0v1ms"]

[node name="WinMenu" type="Control"]
clip_contents = true
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_7shsi")
metadata/_edit_use_anchors_ = true

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.496528
anchor_top = 0.493056
anchor_right = 0.510417
anchor_bottom = 0.517747
offset_left = -52.0
offset_top = -47.5
offset_right = 52.0
offset_bottom = 47.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_dmaew")
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme = ExtResource("2_dmaew")

[node name="Label" type="Label" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
text = "YOU WIN"
horizontal_alignment = 1

[node name="stars" parent="PanelContainer/VBoxContainer" instance=ExtResource("3_dmaew")]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4

[node name="play" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
theme = ExtResource("2_dmaew")
texture_normal = ExtResource("4_1xbon")
texture_hover = ExtResource("5_xtbbn")
stretch_mode = 0

[node name="restart" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = ExtResource("6_w75pu")
texture_hover = ExtResource("7_a5eom")
stretch_mode = 0

[node name="home" type="TextureButton" parent="PanelContainer/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
texture_normal = ExtResource("8_a5eom")
texture_hover = ExtResource("9_0v1ms")
stretch_mode = 0

[node name="jingle" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_0v1ms")
bus = &"SFX"

[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/play" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/restart" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/HBoxContainer/home" to="." method="_on_leave_button_pressed"]
